@@ -1,3 +1,4 @@
+2010-01-19 Refactored handling of fullscreen plugin views
 2010-01-19 Updated conceptual diagram
 2010-01-18 pittinger Added better checking of inputs to Delicious and Twitter plugin
 ---	
